unpackaged/main/default/objects/Skill__c/fields/Build_Plans__c.field-meta.xml
<CustomField>
    <fullName>Build_Plans__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Benefit Transfer team</description>
    <label>Build Plans</label>
    <type>Checkbox</type>
</CustomField>