unpackaged/main/default/objects/Skill__c/fields/IA_Exception__c.field-meta.xml
<CustomField>
    <fullName>IA_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IA Exception</label>
    <type>Checkbox</type>
</CustomField>