unpackaged/main/default/objects/Skill__c/fields/Order_Complexity_Score__c.field-meta.xml
<CustomField>
    <fullName>Order_Complexity_Score__c</fullName>
    <description>Used to create Skill for Payroll Facilitator</description>
    <inlineHelpText>0-9 - Easy
10-19 - Medium
&gt;19 - Hard</inlineHelpText>
    <label>Order Complexity Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Easy</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Hard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>