unpackaged/main/default/objects/Skill__c/fields/Payroll_Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Provider_Type__c</fullName>
    <description>Used to create Skill for Payroll Facilitator</description>
    <label>Payroll Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Instabase</fullName>
            </value>
            <value>
                <fullName>Non-instabase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>