unpackaged/main/default/objects/Skill__c/fields/Payroll_Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Sales_Team__c</fullName>
    <label>Payroll Sales Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small Business Sales</fullName>
            </value>
            <value>
                <fullName>Mid Market Sales</fullName>
            </value>
            <value>
                <fullName>Partner Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>