unpackaged/main/default/objects/Skill__c/fields/Payroll_Transfer_Skills__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Transfer_Skills__c</fullName>
    <label>Payroll Transfer Skills</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bulk Order</fullName>
            </value>
            <value>
                <fullName>Direct Order</fullName>
            </value>
            <value>
                <fullName>BigDesk Order</fullName>
            </value>
            <value>
                <fullName>Externals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>