unpackaged/main/default/objects/Skill__c/fields/States__c.field-meta.xml
<CustomField>
    <fullName>States__c</fullName>
    <description>This will hold all the states that are possible to work on for different skill levels for facilitators</description>
    <label>States</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Abbreviations</valueSetName>
    </valueSet>
</CustomField>